# textanalysis-tool

./: main.py  pyproject.toml
.github/workflows/: build.yml
src/textanalysis_tool/: __init__.py  document.py  html_document.py  plain_text_document.py  say_hello.py
src/textanalysis_tool/greetings/: greet.py
src/textanalysis_tool/readers/: base_reader.py  epub_reader.py  html_reader.py  text_reader.py
tests/: test_document.py  test_say_hello.py
tests/readers/: test_html_reader.py  test_text_reader.py
